fixed jumping plus sign

--- a/src/Modules/ObsidianUI/UIInterfaces/Designer01/BaseComponents/editAbleList/EditAbleList.scss
+++ b/src/Modules/ObsidianUI/UIInterfaces/Designer01/BaseComponents/editAbleList/EditAbleList.scss
@@ -6,6 +6,7 @@
 }
 
 .Editable_row{
+	width: inherit;
 	height:$standard_LineHeight ;
 	//line-height: $standard_fontSize	;
 	padding-left:5px;
@@ -32,10 +33,10 @@
 	background: $backgroundInput;
 	position: sticky;
     width: 100%;
-    bottom: 0;
+    bottom: 1px;
 }
 .Editable_Icon{
 	display: flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
 }
